# fdhmm

./: CMakeLists.txt  README.md
include/: Core.hpp  Dataset.hpp  FileIO.hpp  Folds.hpp  HMM.hpp  HMMExperiment.hpp  HMMTrainer.hpp  HMMWorkerThread.hpp  fdhmm.hpp
src/: Core.cpp  Dataset.cpp  FileIO.cpp  Folds.cpp  HMM.cpp  HMMExperiment.cpp  HMMTrainer.cpp  HMMWorkerThread.cpp
test/: CoreTest.cpp  HMMTest.cpp  main.cpp
